--- a/index.html
+++ b/index.html
@@ -37,12 +37,17 @@
       <p>During my military career, I deployed several times to serve the Nation. I was serving at the Pentagon on 9/11
         and the hijackled jet flew right underneath my office. I've had the good fortune over my lifetime of visiting
         42 countries, and I hope to add to this list in the coming years!</p>
+      <br>
+      <p>LinkedIn profile at:
+        <a href="https://www.linkedin.com/in/michael-albaneze-5339356a/"> Click here</a>
+      </p>
+
 
     </section>
 
   </div>
 
-  <footer class="site-footer">Copyright &copy</footer>
+  <footer class="site-footer">Copyright &copy 2019 MOA LLC</footer>
 
 </body>
 
