--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
 
   </div>
 
-  <footer class="site-footer">Copyright &copy</footer>
+  <footer class="site-footer">Copyright &copy 2019 MOA LLC</footer>
 
 </body>
 
