--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 
   </div>
 
-  <footer class="site-footer">Copyright &copy</footer>
+  <footer class="site-footer">Copyright &copy 2019 MOA LLC</footer>
 
 </body>
 
