--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <head>
   <meta charset="UTF-8">
   <title>About Michael</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <!--<link rel="stylesheet" type="text/css" href="assets/css/reset.css">-->
 </head>
 
 <body>
@@ -31,15 +31,17 @@
 
       <p>Father of three grown children, husband, 30-year Army veteran and retiree, and amateur photographer
         with a special interest in underwater photography of marine life. My wife's name is Mary Beth---so nice they
-        named her twice! We have one cat (Buddy), and a part-time dog (Cassie) that we share with the family that
-        takes care of her most of the time.</p>
+        named her twice! We have one cat (Buddy).</p>
 
       <p>During my military career, I deployed several times to serve the Nation. I was serving at the Pentagon on 9/11
-        and the hijackled jet flew right underneath my office. I've had the good fortune over my lifetime of visiting
-        42 countries, and I hope to add to this list in the coming years!</p>
+        and the hijackled jet flew right underneath my office. I've had the good fortune over my lifetime of visiting 42
+        countries, and I hope to add to this list in the coming years!</p>
       <br>
       <p>LinkedIn profile at:
         <a href="https://www.linkedin.com/in/michael-albaneze-5339356a/"> Click here</a>
+        <br>
+        If you need to reach me by email, go to the Contact page (tab above) and submit your info there.
+
       </p>
 
 
