--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Michael's Portfolio</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <!--<link rel="stylesheet" type="text/css" href="assets/css/reset.css">-->
 </head>
 
 <body>
@@ -26,22 +26,36 @@
       <h2>Projects with UW Coding Bootcamp</h2>
       <div class="projects">
         <figure><a href="https://maalbaneze.github.io/JShomework/" class="small" alt="Hangman Game">
-            <figcaption>Hangman Game</figcaption>
+            <figcaption>Hangman Game (Deployed link)</figcaption>
+            <a href="https://github.com/maalbaneze/JShomework" class="small" alt="Hangman Game">
+              <figcaption>Hangman Game (GitHub link)</figcaption>
         </figure>
         <figure><a href="https://maalbaneze.github.io/TriviaGame/" class="small" alt="Artillery Trivia Game">
-            <figcaption>Artillery Trivia Game</figcaption>
+            <figcaption>Artillery Trivia Game (Deployed link)</figcaption>
+            <a href="https://github.com/maalbaneze/TriviaGame" class="small" alt="Artillery Trivia Game">
+              <figcaption>Artillery Trivia Game (GitHub link)</figcaption>
         </figure>
         <figure><a href=" https://maalbaneze.github.io/Train_Scheduler/" class="small" alt="Train Scheduler">
-            <figcaption>Train Scheduler</figcaption>
+            <figcaption>Train Scheduler (Deployed Link)</figcaption>
+            <a href="https://github.com/maalbaneze/Train_Scheduler" class="small" alt="Train Scheduler">
+              <figcaption>Train Scheduler (GitHub Link)</figcaption>
         </figure>
-        <figure><a href=" https://maalbaneze.github.io/Giphy/" class="small" alt="Giphy Demo">
-            <figcaption>Giphy Demo</figcaption>
+        <figure><a href="https://maalbaneze.github.io/Giphy/" class="small" alt="Giphy Demo">
+            <figcaption>Giphy Demo (Deployed Link)</figcaption>
+            <a href="https://github.com/maalbaneze/Giphy" class="small" alt="Giphy Demo">
+              <figcaption>Giphy Demo (GitHub Link)</figcaption>
         </figure>
+
         <figure><a href=" https://maalbaneze.github.io/unit-4-game/" class="small" alt="Crystal Collector Game">
-            <figcaption>Crystal Collector Game</figcaption>
+            <figcaption>Crystal Collector Game (Deployed Link)</figcaption>
+            <a href="https://github.com/maalbaneze/unit-4-game" class="small" alt="Crystal Collector Game">
+              <figcaption>Crystal Collector Game (GitHub Link)</figcaption>
         </figure>
+
         <figure><a href="https://maalbaneze.github.io/Melos/" class="small" alt="Melos Music App (Project #1)">
-            <figcaption>Melos Music App (Group Project #1)</figcaption>
+            <figcaption>Melos Music App (Group Project #1) (Deployed Link)</figcaption>
+            <a href="https://github.com/maalbaneze/Melos" class="small" alt="Melos Music App (Project #1)">
+              <figcaption>Melos Music App (Group Project #1) (GitHub Link)</figcaption>
         </figure>
       </div>
     </section>
