--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact Michael</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <!--<link rel="stylesheet" type="text/css" href="assets/css/reset.css">-->
 </head>
 
 <body>
