--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,8 @@
       <li><a href="contact.html">Contact</a></li>
       <li><a href="portfolio.html">Portfolio</a></li>
     </ul>
+    <br>
+    <h2 id="location">Seattle, WA</h2>
   </header>
 
   <div class="container">
