--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,8 @@
       <li><a href="contact.html">Contact</a></li>
       <li><a href="portfolio.html">Portfolio</a></li>
     </ul>
+    <br>
+    <h2 id="location">Seattle, WA</h2>
   </header>
 
   <div class="container">
@@ -57,6 +59,13 @@
             <a href="https://github.com/maalbaneze/Melos" class="small" alt="Melos Music App (Project #1)">
               <figcaption>Melos Music App (Group Project #1) (GitHub Link)</figcaption>
         </figure>
+
+        <figure><a href="https://your-study-buddy.herokuapp.com/" class="small" alt="Studybuddy App (Project #2)">
+            <figcaption>Studybuddy App (Group Project #2) (Deployed Heroku Link)</figcaption>
+            <a href="https://github.com/maalbaneze/studybuddy" class="small" alt="Studybuddy App (Project #2)">
+              <figcaption>Studybuddy App (Group Project #2) (GitHub Link)</figcaption>
+        </figure>
+
       </div>
     </section>
 
