--- a/portfolio.html
+++ b/portfolio.html
@@ -69,11 +69,12 @@
       </div>
     </section>
 
-    <section class="portfolio">
+    <section class="portfolio2">
       <h2>Photo Portfolio</h2>
       <div class="pictures">
-        <figure><img src="assets/images/orchid-for-web.png" class="small" alt="Orchid close-up" />
-          <figcaption>Close-up Orchid</figcaption>
+        <figure><img src="assets/images/GST over Electric Beach.JPG" class="small"
+            alt="Green Sea Turtle by Electric Beach" />
+          <figcaption>Gereen Sea Turtle by Electric Beach</figcaption>
         </figure>
         <figure><img src="assets/images/Turtle Bay at Night old photo.jpg" class="small"
             alt="Old photo style for Turtle Bay at night" />
