--- a/portfolio.html
+++ b/portfolio.html
@@ -29,41 +29,57 @@
       <div class="projects">
         <figure><a href="https://maalbaneze.github.io/JShomework/" class="small" alt="Hangman Game">
             <figcaption>Hangman Game (Deployed link)</figcaption>
-            <a href="https://github.com/maalbaneze/JShomework" class="small" alt="Hangman Game">
-              <figcaption>Hangman Game (GitHub link)</figcaption>
+          </a>
+          <a href="https://github.com/maalbaneze/JShomework" class="small" alt="Hangman Game">
+            <figcaption>Hangman Game (GitHub link)</figcaption>
+          </a>
         </figure>
         <figure><a href="https://maalbaneze.github.io/TriviaGame/" class="small" alt="Artillery Trivia Game">
             <figcaption>Artillery Trivia Game (Deployed link)</figcaption>
-            <a href="https://github.com/maalbaneze/TriviaGame" class="small" alt="Artillery Trivia Game">
-              <figcaption>Artillery Trivia Game (GitHub link)</figcaption>
+          </a>
+          <a href="https://github.com/maalbaneze/TriviaGame" class="small" alt="Artillery Trivia Game">
+            <figcaption>Artillery Trivia Game (GitHub link)</figcaption>
+          </a>
         </figure>
+
         <figure><a href=" https://maalbaneze.github.io/Train_Scheduler/" class="small" alt="Train Scheduler">
             <figcaption>Train Scheduler (Deployed Link)</figcaption>
-            <a href="https://github.com/maalbaneze/Train_Scheduler" class="small" alt="Train Scheduler">
-              <figcaption>Train Scheduler (GitHub Link)</figcaption>
+          </a>
+          <a href="https://github.com/maalbaneze/Train_Scheduler" class="small" alt="Train Scheduler">
+            <figcaption>Train Scheduler (GitHub Link)</figcaption>
+          </a>
         </figure>
+
         <figure><a href="https://maalbaneze.github.io/Giphy/" class="small" alt="Giphy Demo">
             <figcaption>Giphy Demo (Deployed Link)</figcaption>
-            <a href="https://github.com/maalbaneze/Giphy" class="small" alt="Giphy Demo">
-              <figcaption>Giphy Demo (GitHub Link)</figcaption>
+          </a>
+          <a href="https://github.com/maalbaneze/Giphy" class="small" alt="Giphy Demo">
+            <figcaption>Giphy Demo (GitHub Link)</figcaption>
+          </a>
         </figure>
 
         <figure><a href=" https://maalbaneze.github.io/unit-4-game/" class="small" alt="Crystal Collector Game">
             <figcaption>Crystal Collector Game (Deployed Link)</figcaption>
-            <a href="https://github.com/maalbaneze/unit-4-game" class="small" alt="Crystal Collector Game">
-              <figcaption>Crystal Collector Game (GitHub Link)</figcaption>
+          </a>
+          <a href="https://github.com/maalbaneze/unit-4-game" class="small" alt="Crystal Collector Game">
+            <figcaption>Crystal Collector Game (GitHub Link)</figcaption>
+          </a>
         </figure>
 
         <figure><a href="https://maalbaneze.github.io/Melos/" class="small" alt="Melos Music App (Project #1)">
             <figcaption>Melos Music App (Group Project #1) (Deployed Link)</figcaption>
-            <a href="https://github.com/maalbaneze/Melos" class="small" alt="Melos Music App (Project #1)">
-              <figcaption>Melos Music App (Group Project #1) (GitHub Link)</figcaption>
+          </a>
+          <a href="https://github.com/maalbaneze/Melos" class="small" alt="Melos Music App (Project #1)">
+            <figcaption>Melos Music App (Group Project #1) (GitHub Link)</figcaption>
+        </figure></a>
         </figure>
 
         <figure><a href="https://your-study-buddy.herokuapp.com/" class="small" alt="Studybuddy App (Project #2)">
             <figcaption>Studybuddy App (Group Project #2) (Deployed Heroku Link)</figcaption>
-            <a href="https://github.com/maalbaneze/studybuddy" class="small" alt="Studybuddy App (Project #2)">
-              <figcaption>Studybuddy App (Group Project #2) (GitHub Link)</figcaption>
+          </a>
+          <a href="https://github.com/maalbaneze/studybuddy" class="small" alt="Studybuddy App (Project #2)">
+            <figcaption>Studybuddy App (Group Project #2) (GitHub Link)</figcaption>
+          </a>
         </figure>
 
       </div>
